--- a/about.html
+++ b/about.html
@@ -10,14 +10,14 @@
         content="Learn about Wander Lanka Tours, your trusted travel partner in Sri Lanka committed to authentic and sustainable tourism.">
     <meta name="keywords"
         content="about Wander Lanka Tours, Sri Lanka travel agency, sustainable tourism Sri Lanka, local tour guides">
-    <link rel="canonical" href="https://www.ceylonsang.com/about.html">
+    <link rel="canonical" href="https://www.wanderlankatours.com/about.html">
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.ceylonsang.com/about.html">
+    <meta property="og:url" content="https://www.wanderlankatours.com/about.html">
     <meta property="og:title" content="About Us - Wander Lanka Tours">
     <meta property="og:description" content="Your trusted guide to the Pearl of the Indian Ocean.">
-    <meta property="og:image" content="https://www.ceylonsang.com/images/bg_1.jpg">
+    <meta property="og:image" content="https://www.wanderlankatours.com/images/bg_1.jpg">
 
     <link rel="preload" as="image" href="images/bg_1.jpg">
 
