--- a/contact.html
+++ b/contact.html
@@ -10,14 +10,14 @@
         content="Get in touch with Wander Lanka Tours for personalized Sri Lankan tour packages. Available via email, phone, and WhatsApp.">
     <meta name="keywords"
         content="contact Wander Lanka Tours, book Sri Lanka tour, travel agency Sri Lanka contact, tour inquiries">
-    <link rel="canonical" href="https://www.ceylonsang.com/contact.html">
+    <link rel="canonical" href="https://www.wanderlankatours.com/contact.html">
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.ceylonsang.com/contact.html">
+    <meta property="og:url" content="https://www.wanderlankatours.com/contact.html">
     <meta property="og:title" content="Contact Us - Wander Lanka Tours">
     <meta property="og:description" content="Plan your perfect Sri Lankan holiday. Contact our expert team today.">
-    <meta property="og:image" content="https://www.ceylonsang.com/images/bg_1.jpg">
+    <meta property="og:image" content="https://www.wanderlankatours.com/images/bg_1.jpg">
 
     <link rel="preload" as="image" href="images/bg_1.jpg">
 
