--- a/packages.html
+++ b/packages.html
@@ -10,15 +10,15 @@
         content="Browse our exclusive Sri Lanka tour packages. Wander Lanka Tours offers specialized itineraries for culture, wildlife, and leisure.">
     <meta name="keywords"
         content="tour packages Sri Lanka, Wander Lanka Tours packages, Sri Lanka itinerary, holiday packages Sri Lanka, wildlife tour Sri Lanka, cultural tour packages">
-    <link rel="canonical" href="https://www.ceylonsang.com/packages.html">
+    <link rel="canonical" href="https://www.wanderlankatours.com/packages.html">
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.ceylonsang.com/packages.html">
+    <meta property="og:url" content="https://www.wanderlankatours.com/packages.html">
     <meta property="og:title" content="Tour Packages - Wander Lanka Tours">
     <meta property="og:description"
         content="Curated experiences for every traveler. Book your dream Sri Lankan vacation.">
-    <meta property="og:image" content="https://www.ceylonsang.com/images/bg_1.jpg">
+    <meta property="og:image" content="https://www.wanderlankatours.com/images/bg_1.jpg">
 
     <link rel="preload" as="image" href="images/bg_1.jpg">
 
