--- a/resources/auto_reply_template.html
+++ b/resources/auto_reply_template.html
@@ -22,7 +22,7 @@
         }
 
         .header {
-            background-image: url('https://www.ceylonsang.com/images/bg_1.jpg');
+            background-image: url('https://www.wanderlankatours.com/images/bg_1.jpg');
             /* Replace with actual hosted image URL */
             background-size: cover;
             background-position: center;
@@ -136,7 +136,7 @@
                 <p>In the meantime, feel free to explore more of our tour packages and get inspired!</p>
             </div>
 
-            <a href="https://www.ceylonsang.com/packages.html" class="cta-button">Explore Packages</a>
+            <a href="https://www.wanderlankatours.com/packages.html" class="cta-button">Explore Packages</a>
 
             <div class="social-proof">
                 <p>"The journey of a thousand miles begins with a single step."</p>
@@ -151,7 +151,7 @@
                 181 8549
             </p>
             <p>&copy; 2026 Wander Lanka Tours. All rights reserved.</p>
-            <p><a href="https://www.ceylonsang.com">Visit our website</a></p>
+            <p><a href="https://www.wanderlankatours.com">Visit our website</a></p>
         </div>
     </div>
 </body>
