--- a/services.html
+++ b/services.html
@@ -10,14 +10,14 @@
         content="Luxury travel services in Sri Lanka including airport transfers, guided tours, accommodation booking, and wildlife safaris.">
     <meta name="keywords"
         content="Explore the wide range of travel services offered by Wander Lanka Tours. Fromguided tours to wildlife safaris and event management.">
-    <link rel="canonical" href="https://www.ceylonsang.com/services.html">
+    <link rel="canonical" href="https://www.wanderlankatours.com/services.html">
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.ceylonsang.com/services.html">
+    <meta property="og:url" content="https://www.wanderlankatours.com/services.html">
     <meta property="og:title" content="Our Services - Wander Lanka Tours">
     <meta property="og:description" content="Professional travel services for a hassle-free Sri Lankan holiday.">
-    <meta property="og:image" content="https://www.ceylonsang.com/images/bg_1.jpg">
+    <meta property="og:image" content="https://www.wanderlankatours.com/images/bg_1.jpg">
 
     <link rel="preload" as="image" href="images/services.jpg">
 
