--- a/destinations.html
+++ b/destinations.html
@@ -10,14 +10,14 @@
         content="Explore the best tourist destinations in Sri Lanka with Wander Lanka Tours. From ancient cities to pristine beaches and hill country.">
     <meta name="keywords"
         content="Sri Lanka destinations, tourist places Sri Lanka, Wander Lanka Tours locations, travel guide Sri Lanka">
-    <link rel="canonical" href="https://www.ceylonsang.com/destinations.html">
+    <link rel="canonical" href="https://www.wanderlankatours.com/destinations.html">
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.ceylonsang.com/destinations.html">
+    <meta property="og:url" content="https://www.wanderlankatours.com/destinations.html">
     <meta property="og:title" content="Destinations - Wander Lanka Tours">
     <meta property="og:description" content="Discover the most beautiful places in Sri Lanka.">
-    <meta property="og:image" content="https://www.ceylonsang.com/images/bg_1.jpg">
+    <meta property="og:image" content="https://www.wanderlankatours.com/images/bg_1.jpg">
 
     <link rel="preload" as="image" href="images/bg_1.jpg">
 
