--- a/gallery.html
+++ b/gallery.html
@@ -10,14 +10,14 @@
         content="View our gallery of stunning photos from tours organized by Wander Lanka Tours. Get inspired for your next Sri Lankan adventure.">
     <meta name="keywords"
         content="Sri Lanka tour photos, travel gallery, Wander Lanka Tours images, traveler experiences Sri Lanka, travel inspiration">
-    <link rel="canonical" href="https://www.ceylonsang.com/gallery.html">
+    <link rel="canonical" href="https://www.wanderlankatours.com/gallery.html">
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.ceylonsang.com/gallery.html">
+    <meta property="og:url" content="https://www.wanderlankatours.com/gallery.html">
     <meta property="og:title" content="Gallery - Wander Lanka Tours">
     <meta property="og:description" content="See the beauty of Sri Lanka through our lens.">
-    <meta property="og:image" content="https://www.ceylonsang.com/images/bg_1.jpg">
+    <meta property="og:image" content="https://www.wanderlankatours.com/images/bg_1.jpg">
 
     <link rel="preload" as="image" href="images/bg_1.jpg">
 
