--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
     <meta name="keywords"
         content="Sri Lanka tours, Ceylon travel, luxury holidays Sri Lanka, tour guide Sri Lanka, wildlife safari, cultural tourism">
     <meta name="author" content="Wander Lanka Tours">
-    <link rel="canonical" href="https://www.ceylonsang.com/">
+    <link rel="canonical" href="https://www.wanderlankatours.com/">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.ceylonsang.com/">
+    <meta property="og:url" content="https://www.wanderlankatours.com/">
     <meta property="og:title" content="Wander Lanka Tours - Premium Sri Lankan Tours">
     <meta property="og:description"
         content="Experience the magic of Sri Lanka with expert local guidance. Book your perfect holiday today.">
-    <meta property="og:image" content="https://www.ceylonsang.com/images/bg_1.jpg">
+    <meta property="og:image" content="https://www.wanderlankatours.com/images/bg_1.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://www.ceylonsang.com/">
+    <meta property="twitter:url" content="https://www.wanderlankatours.com/">
     <meta property="twitter:title" content="Wander Lanka Tours - Premium Sri Lankan Tours">
     <meta property="twitter:description" content="Experience the magic of Sri Lanka with expert local guidance.">
-    <meta property="twitter:image" content="https://www.ceylonsang.com/images/bg_1.jpg">
+    <meta property="twitter:image" content="https://www.wanderlankatours.com/images/bg_1.jpg">
 
     <link rel="preload" as="image" href="images/bg_1.jpg">
 
