Replace text logo with logo.png image across all pages

--- a/about.html
+++ b/about.html
@@ -42,8 +42,10 @@
     <!-- Premium Navigation -->
     <nav class="navbar" id="navbar">
         <div class="logo-container">
-            <h1 class="logo">Wander Lanka Tours</h1>
-            <span class="tagline">SRI LANKAN TOUR GUIDE</span>
+            <a href="index.html">
+                <img src="images/logo/logo.png" alt="Wander Lanka Tours Logo" class="nav-logo"
+                    style="max-height: 80px;">
+            </a>
         </div>
 
         <ul class="nav-links">
