--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@
     <nav class="navbar" id="navbar">
         <div class="container-fluid d-flex align-items-center justify-content-between">
             <div class="logo-container">
-                <h1 class="logo">Wander Lanka Tours</h1>
-                <span class="tagline">SRI LANKAN TOUR GUIDEr</span>
+                <a href="index.html">
+                    <img src="images/logo/logo.png" alt="Wander Lanka Tours Logo" class="nav-logo"
+                        style="max-height: 80px;">
+                </a>
             </div>
 
             <ul class="nav-links">
