--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="container-fluid d-flex align-items-center justify-content-between">
             <div class="logo-container">
                 <a href="index.html">
-                    <img src="images/logo/logo.png" alt="Wander Lanka Tours Logo" class="nav-logo"
+                    <img src="images/logo/logo1.png" alt="Wander Lanka Tours Logo" class="nav-logo"
                         style="max-height: 80px;">
                 </a>
             </div>
