--- a/index.html
+++ b/index.html
@@ -471,7 +471,8 @@
                                             6428</span></a></li>
                                 <li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+94 71 181
                                             8549</span></a></li>
-                                class="text">tourswanderlanka@gmail.com</span></a></li>
+                                <li><a href="#"><span class="icon fa fa-paper-plane"></span><span
+                                            class="text">tourswanderlanka@gmail.com</span></a></li>
                             </ul>
                         </div>
                     </div>
