--- a/services.html
+++ b/services.html
@@ -95,7 +95,8 @@
                     <h2 class="mb-4">Comprehensive Tour Services</h2>
                     <p>At Wander Lanka Tours, we offer comprehensive travel services tailored to your needs. From
                         airport transfers to guided tours and event management, we ensure your Sri Lankan adventure is
-                        unforgettable, safe, and perfectly tailored to your needs.</p>
+                        unforgettable, safe, and perfectly tailored to your needs. <strong>We provide both male and
+                            female professional drivers to ensure your comfort and preferences are met.</strong></p>
                 </div>
             </div>
 
@@ -257,7 +258,10 @@
                             <li><i class="fa fa-check" style="color: var(--sunset-orange);"></i> Personalized itinerary
                                 planning</li>
                             <li><i class="fa fa-check" style="color: var(--sunset-orange);"></i> Private vehicle &
-                                driver</li>
+                                professional driver</li>
+                            <li><i class="fa fa-check" style="color: var(--sunset-orange);"></i> <strong>Male or female
+                                    driver options available</strong>
+                            </li>
                             <li><i class="fa fa-check" style="color: var(--sunset-orange);"></i> Flexible scheduling
                             </li>
                             <li><i class="fa fa-check" style="color: var(--sunset-orange);"></i> Accommodation booking
@@ -284,7 +288,8 @@
                     <div class="contact-info-item text-center">
                         <div class="icon"><span class="fa fa-car"></span></div>
                         <h3>Transportation</h3>
-                        <p>Comfortable, air-conditioned vehicles with experienced drivers</p>
+                        <p>Comfortable, air-conditioned vehicles with experienced professional drivers. <strong>Male or
+                                female drivers available upon request.</strong></p>
                     </div>
                 </div>
                 <div class="col-md-3 ftco-animate">
@@ -401,26 +406,72 @@
     <div id="loginModal" class="modal">
         <div class="modal-content">
             <div class="modal-header">
-                <h2>Login to Wander Lanka Tours</h2>
+                <div>
+                    <h2>Welcome Back</h2>
+                    <p>Login to Wander Lanka Tours to continue your journey</p>
+                </div>
                 <button class="close-modal" onclick="closeModal('loginModal')">&times;</button>
             </div>
             <div class="modal-body">
                 <div id="loginError" class="error-message"></div>
                 <form id="loginForm">
-                    <div class="form-group">
+                    <div class="input-group">
+                        <span class="fa fa-envelope input-icon"></span>
+                        <input type="email" id="loginEmail" name="email" required placeholder=" ">
                         <label for="loginEmail">Email Address</label>
-                        <input type="email" id="loginEmail" name="email" required placeholder="Enter your email">
                     </div>
-                    <div class="form-group">
+                    <div class="input-group">
+                        <span class="fa fa-lock input-icon"></span>
+                        <input type="password" id="loginPassword" name="password" required placeholder=" ">
                         <label for="loginPassword">Password</label>
-                        <input type="password" id="loginPassword" name="password" required
-                            placeholder="Enter your password">
+                        <span class="fa fa-eye toggle-password" onclick="togglePassword('loginPassword', this)"></span>
                     </div>
-                    <button type="submit" class="btn-auth">Login</button>
+
+                    <div class="extra-links">
+                        <a href="#" onclick="switchToForgot(event)" class="forgot-link">Forgot Password?</a>
+                    </div>
+
+                    <button type="submit" class="btn-auth">
+                        <span>Login to Account</span>
+                    </button>
+                </form>
+
+                <div class="divider">OR</div>
+
+                <div class="modal-footer" style="background: none; border: none; padding: 0;">
+                    <p>Don't have an account? <a onclick="switchToSignup()">Sign up here</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Forgot Password Modal -->
+    <div id="forgotModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <div>
+                    <h2>Reset Password</h2>
+                    <p>We'll help you get back comfortably</p>
+                </div>
+                <button class="close-modal" onclick="closeModal('forgotModal')">&times;</button>
+            </div>
+            <div class="modal-body">
+                <div id="forgotError" class="error-message"></div>
+                <div id="forgotSuccess" class="success-message"></div>
+                <p style="margin-bottom: 25px; color: #666; font-size: 0.95rem; text-align: center;">Do not worry! Enter
+                    your email address associated with your account and we will send you a link to reset your password.
+                </p>
+                <form id="forgotForm">
+                    <div class="input-group">
+                        <span class="fa fa-envelope input-icon"></span>
+                        <input type="email" id="forgotEmail" name="email" required placeholder=" ">
+                        <label for="forgotEmail">Email Address</label>
+                    </div>
+                    <button type="submit" class="btn-auth">Send Reset Link</button>
                 </form>
             </div>
             <div class="modal-footer">
-                <p>Don't have an account? <a onclick="switchToSignup()">Sign up here</a></p>
+                <p>Remembered it? <a onclick="switchToLogin()">Login here</a></p>
             </div>
         </div>
     </div>
@@ -429,35 +480,45 @@
     <div id="signupModal" class="modal">
         <div class="modal-content">
             <div class="modal-header">
-                <h2>Create Account</h2>
+                <div>
+                    <h2>Create Account</h2>
+                    <p>Join us for exclusive experiences</p>
+                </div>
                 <button class="close-modal" onclick="closeModal('signupModal')">&times;</button>
             </div>
             <div class="modal-body">
                 <div id="signupError" class="error-message"></div>
                 <form id="signupForm">
-                    <div class="form-group">
+                    <div class="input-group">
+                        <span class="fa fa-user input-icon"></span>
+                        <input type="text" id="signupName" name="name" required placeholder=" ">
                         <label for="signupName">Full Name</label>
-                        <input type="text" id="signupName" name="name" required placeholder="Enter your full name">
                     </div>
-                    <div class="form-group">
+                    <div class="input-group">
+                        <span class="fa fa-envelope input-icon"></span>
+                        <input type="email" id="signupEmail" name="email" required placeholder=" ">
                         <label for="signupEmail">Email Address</label>
-                        <input type="email" id="signupEmail" name="email" required placeholder="Enter your email">
                     </div>
-                    <div class="form-group">
+                    <div class="input-group">
+                        <span class="fa fa-lock input-icon"></span>
+                        <input type="password" id="signupPassword" name="password" required placeholder=" ">
                         <label for="signupPassword">Password</label>
-                        <input type="password" id="signupPassword" name="password" required
-                            placeholder="At least 6 characters">
+                        <span class="fa fa-eye toggle-password" onclick="togglePassword('signupPassword', this)"></span>
                     </div>
-                    <div class="form-group">
-                        <label for="signupConfirmPassword">Confirm Password</label>
+                    <div class="input-group">
+                        <span class="fa fa-lock input-icon"></span>
                         <input type="password" id="signupConfirmPassword" name="confirmPassword" required
-                            placeholder="Re-enter your password">
+                            placeholder=" ">
+                        <label for="signupConfirmPassword">Confirm Password</label>
                     </div>
                     <button type="submit" class="btn-auth">Create Account</button>
                 </form>
-            </div>
-            <div class="modal-footer">
-                <p>Already have an account? <a onclick="switchToLogin()">Login here</a></p>
+
+                <div class="divider">OR</div>
+
+                <div class="modal-footer" style="background: none; border: none; padding: 0;">
+                    <p>Already have an account? <a onclick="switchToLogin()">Login here</a></p>
+                </div>
             </div>
         </div>
     </div>
