--- a/services.html
+++ b/services.html
@@ -250,7 +250,7 @@
                 </div>
                 <div class="col-md-6 ftco-animate">
                     <div class="pr-md-5">
-                        <span class="subheading">Service 06</span>
+                        <!-- <span class="subheading">Service 06</span> -->
                         <h2 class="mb-4">Customized Private Tours</h2>
                         <p>Create your perfect itinerary with our fully customizable private tours. We work with you to
                             design a journey that matches your interests, schedule, and budget.</p>
