--- a/forgot-password.html
+++ b/forgot-password.html
@@ -62,7 +62,7 @@
         .logo-section img {
             max-width: 220px;
             height: auto;
-            margin-bottom: 20px;
+            margin-bottom:0px;
         }
 
         .brand-name {
@@ -289,8 +289,8 @@
     <div class="forgot-container">
         <div class="forgot-card">
             <div class="logo-section">
-                <img src="images/logo/logo.png" alt="Wander Lanka Tours Logo">
-                <div class="brand-name">Wander Lanka Tours</div>
+                <img src="images/logo/logo1.png" alt="Wander Lanka Tours Logo">
+                <!-- <div class="brand-name">Wander Lanka Tours</div> -->
             </div>
 
             <div class="forgot-header">
