feat: Revamp UI across multiple pages, introduce new styling and scripting, and remove development documentation.

--- a/packages.html
+++ b/packages.html
@@ -394,77 +394,87 @@
         </div>
     </section>
 
-    <footer class="ftco-footer bg-bottom ftco-no-pt" style="background-image: url(images/bg_3.jpg);">
+    <!-- Premium Footer -->
+    <footer class="premium-footer">
         <div class="container">
-            <div class="row mb-5">
-                <div class="col-md pt-5">
-                    <div class="ftco-footer-widget pt-md-5 mb-4">
-                        <h2 class="ftco-heading-2">About Wander Lanka Tours</h2>
+            <div class="row">
+                <!-- Brand Column -->
+                <div class="col-lg-4 col-md-6 mb-5 mb-md-0">
+                    <div class="footer-brand">
+                        <a href="index.html" class="logo">
+                            <img src="images/logo/logo1.png" alt="Wander Lanka Tours"
+                                style="height: 70px; margin-bottom: 20px;">
+                        </a>
                         <p>Your trusted Sri Lankan tour guide, bringing you authentic experiences and unforgettable
                             memories across the Pearl of the Indian Ocean.</p>
-                        <ul class="ftco-footer-social list-unstyled float-md-left float-lft">
-                            <li class="ftco-animate"><a href="#"><span class="fa fa-twitter"></span></a></li>
-                            <li class="ftco-animate"><a href="#"><span class="fa fa-facebook"></span></a></li>
-                            <li class="ftco-animate"><a href="#"><span class="fa fa-instagram"></span></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md pt-5 border-left">
-                    <div class="ftco-footer-widget pt-md-5 mb-4 ml-md-5">
-                        <h2 class="ftco-heading-2">Quick Links</h2>
-                        <ul class="list-unstyled">
-                            <li><a href="about.html" class="py-2 d-block">About Us</a></li>
-                            <li><a href="services.html" class="py-2 d-block">Our Services</a></li>
-                            <li><a href="destinations.html" class="py-2 d-block">Destinations</a></li>
-                            <li><a href="packages.html" class="py-2 d-block">Tour Packages</a></li>
-                            <li><a href="gallery.html" class="py-2 d-block">Gallery</a></li>
-                            <li><a href="contact.html" class="py-2 d-block">Contact Us</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md pt-5 border-left">
-                    <div class="ftco-footer-widget pt-md-5 mb-4">
-                        <h2 class="ftco-heading-2">Experiences</h2>
-                        <ul class="list-unstyled">
-                            <li><a href="#" class="py-2 d-block">Cultural Tours</a></li>
-                            <li><a href="#" class="py-2 d-block">Wildlife Safaris</a></li>
-                            <li><a href="#" class="py-2 d-block">Beach Holidays</a></li>
-                            <li><a href="#" class="py-2 d-block">Adventure Tours</a></li>
-                            <li><a href="#" class="py-2 d-block">Tea Plantation Visits</a></li>
-                            <li><a href="#" class="py-2 d-block">Ayurveda Wellness</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md pt-5 border-left">
-                    <div class="ftco-footer-widget pt-md-5 mb-4">
-                        <h2 class="ftco-heading-2">Have Questions?</h2>
-                        <div class="block-23 mb-3">
-                            <ul>
-                                <li><span class="icon fa fa-map-marker"></span><span class="text">Colombo, Sri
-                                        Lanka</span></li>
-                                <li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+94 76 268
-                                            6428</span></a></li>
-                                <li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+94 71 181
-                                            8549</span></a></li>
-                                <li><a href="#"><span class="icon fa fa-paper-plane"></span><span
-                                            class="text">tourswanderlanka@gmail.com</span></a></li>
-                            </ul>
+                        <div class="footer-social-icons">
+                            <a href="#" class="social-icon-circle"><i class="fa fa-twitter"></i></a>
+                            <a href="#" class="social-icon-circle"><i class="fa fa-facebook"></i></a>
+                            <a href="#" class="social-icon-circle"><i class="fa fa-instagram"></i></a>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12 text-center">
-                    <p>Copyright &copy;
-                        <script>document.write(new Date().getFullYear());</script> Wander Lanka Tours - All rights
-                        reserved
-                    </p>
+
+                <!-- Quick Links -->
+                <div class="col-lg-2 col-md-3 col-6 mb-4 mb-md-0">
+                    <h3 class="footer-heading">Quick Links</h3>
+                    <div class="footer-links">
+                        <ul>
+                            <li><a href="about.html">About Us</a></li>
+                            <li><a href="services.html">Our Services</a></li>
+                            <li><a href="destinations.html">Destinations</a></li>
+                            <li><a href="packages.html">Tour Packages</a></li>
+                            <li><a href="gallery.html">Gallery</a></li>
+                            <li><a href="contact.html">Contact Us</a></li>
+                        </ul>
+                    </div>
                 </div>
+
+                <!-- Experiences -->
+                <div class="col-lg-3 col-md-3 col-6 mb-4 mb-md-0">
+                    <h3 class="footer-heading">Experiences</h3>
+                    <div class="footer-links">
+                        <ul>
+                            <li><a href="destinations.html#cultural">Cultural Tours</a></li>
+                            <li><a href="destinations.html#wildlife">Wildlife Safaris</a></li>
+                            <li><a href="destinations.html#beach">Beach Holidays</a></li>
+                            <li><a href="destinations.html#adventure">Adventure Tours</a></li>
+                            <li><a href="destinations.html#heritage">Heritage Sites</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- Contact -->
+                <div class="col-lg-3 col-md-12">
+                    <h3 class="footer-heading">Contact Us</h3>
+                    <ul class="footer-contact-info list-unstyled">
+                        <li><i class="fa fa-map-marker"></i> Colombo, Sri Lanka</li>
+                        <li><a href="tel:+94762686428" style="color: inherit;"><i class="fa fa-phone"></i> +94 76 268
+                                6428</a></li>
+                        <li><a href="tel:+94711818549" style="color: inherit;"><i class="fa fa-phone"></i> +94 71 181
+                                8549</a></li>
+                        <li><a href="mailto:tourswanderlanka@gmail.com" style="color: inherit;"><i
+                                    class="fa fa-paper-plane"></i> tourswanderlanka@gmail.com</a></li>
+                    </ul>
+                    <a href="contact.html" class="footer-btn-contact">Contact Us <i
+                            class="fa fa-angle-right ml-2"></i></a>
+                </div>
+            </div>
+
+
+
+            <!-- Bottom -->
+            <div class="footer-bottom">
+                <p class="mb-0">
+                    Copyright &copy; 2026 Wander Lanka Tours - All rights reserved <br>
+                    Developed by <a href="https://chathukadilakshana.vercel.app/" target="_blank"
+                        style="color: inherit; text-decoration: none;">Chathuka Dilakshana</a>
+                </p>
             </div>
         </div>
     </footer>
 
-<!-- Login Modal -->
+    <!-- Login Modal -->
     <div id="loginModal" class="modal">
         <div class="modal-content">
             <div class="modal-header">
@@ -585,7 +595,7 @@
         </div>
     </div>
 
-    
+
     <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
             <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
             <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
@@ -634,6 +644,12 @@
             });
         });
     </script>
+    <!-- Floating WhatsApp Button -->
+    <a href="https://wa.me/94762686428?text=Hello%20Wander%20Lanka%20Tours,%20I%20would%20like%20to%20inquire%20about%20a%20tour."
+        class="whatsapp-float" target="_blank" aria-label="Chat on WhatsApp">
+        <i class="fa fa-whatsapp whatsapp-icon"></i>
+    </a>
+
 </body>
 
 </html>
