--- a/gallery.html
+++ b/gallery.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Gallery - Wander Lanka Tours</title>
+    <link rel="icon" href="images/favicon.png" type="image/png">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
