fix: Update Facebook social media links with correct URL and add target blank attribute.

--- a/contact.html
+++ b/contact.html
@@ -312,7 +312,8 @@
                     <div class="contact-info-item">
                         <div class="icon"><span class="fa fa-facebook"></span></div>
                         <h3>Facebook</h3>
-                        <p><a href="#">@WanderLankaTours</a></p>
+                        <p><a href="https://www.facebook.com/share/1C66ZvspiU/" target="_blank">@WanderLankaTours</a>
+                        </p>
                     </div>
                 </div>
                 <div class="col-md-3 ftco-animate text-center">
@@ -355,7 +356,8 @@
                             memories across the Pearl of the Indian Ocean.</p>
                         <div class="footer-social-icons">
                             <a href="#" class="social-icon-circle"><i class="fa fa-twitter"></i></a>
-                            <a href="#" class="social-icon-circle"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.facebook.com/share/1C66ZvspiU/" target="_blank"
+                                class="social-icon-circle"><i class="fa fa-facebook"></i></a>
                             <a href="#" class="social-icon-circle"><i class="fa fa-instagram"></i></a>
                         </div>
                     </div>
