--- a/destinations.html
+++ b/destinations.html
@@ -2919,7 +2919,8 @@
                             memories across the Pearl of the Indian Ocean.</p>
                         <div class="footer-social-icons">
                             <a href="#" class="social-icon-circle"><i class="fa fa-twitter"></i></a>
-                            <a href="#" class="social-icon-circle"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.facebook.com/share/1C66ZvspiU/" target="_blank"
+                                class="social-icon-circle"><i class="fa fa-facebook"></i></a>
                             <a href="#" class="social-icon-circle"><i class="fa fa-instagram"></i></a>
                         </div>
                     </div>
