feat: Enhance site responsiveness with new mobile and hero styling, add new images and an auto-reply template, and update various page contents and contact information.

--- a/about.html
+++ b/about.html
@@ -36,6 +36,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/typography.css">
     <link rel="stylesheet" href="css/ceylon-sang.css">
+    <link rel="stylesheet" href="css/hero-fixes.css?v=2">
     <link rel="stylesheet" href="css/mobile-enhancements.css">
     <link rel="stylesheet" href="css/auth-modal.css">
 </head>
@@ -292,8 +293,8 @@
                 <div class="col-lg-3 col-md-12">
                     <h3 class="footer-heading">Contact Us</h3>
                     <ul class="footer-contact-info list-unstyled">
-                        <li><i class="fa fa-map-marker"></i> Colombo, Sri Lanka</li>
-                        <li><a href="tel:+94762686428" style="color: inherit;"><i class="fa fa-phone"></i> +94 76 268
+                        <li><i class="fa fa-map-marker"></i> 23/1 Colombo Road, Negombo, Sri Lanka</li>
+                        <li><a href="tel:+94711818549" style="color: inherit;"><i class="fa fa-phone"></i> +94 71 181
                                 6428</a></li>
                         <li><a href="tel:+94711818549" style="color: inherit;"><i class="fa fa-phone"></i> +94 71 181
                                 8549</a></li>
@@ -461,7 +462,7 @@
     <script src="js/auth.js" defer></script>
     <script src="js/video-autoplay.js" defer></script>
     <!-- Floating WhatsApp Button -->
-    <a href="https://wa.me/94762686428?text=Hello%20Wander%20Lanka%20Tours,%20I%20would%20like%20to%20inquire%20about%20a%20tour."
+    <a href="https://wa.me/94711818549?text=Hello%20Wander%20Lanka%20Tours,%20I%20would%20like%20to%20inquire%20about%20a%20tour."
         class="whatsapp-float" target="_blank" aria-label="Chat on WhatsApp">
         <i class="fa fa-whatsapp whatsapp-icon"></i>
     </a>
