--- a/resources/auto_reply_template.html
+++ b/resources/auto_reply_template.html
@@ -146,7 +146,7 @@
         <!-- Footer -->
         <div class="footer">
             <p><strong>Wander Lanka Tours</strong><br>
-                Colombo, Sri Lanka<br>
+                23/1 Colombo Road, Negombo, Sri Lanka<br>
                 <a href="mailto:tourswanderlanka@gmail.com">tourswanderlanka@gmail.com</a> | +94 76 268 6428 / +94 71
                 181 8549
             </p>
