--- a/services.html
+++ b/services.html
@@ -36,6 +36,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/typography.css">
     <link rel="stylesheet" href="css/ceylon-sang.css">
+    <link rel="stylesheet" href="css/hero-fixes.css?v=2">
     <link rel="stylesheet" href="css/mobile-enhancements.css">
     <link rel="stylesheet" href="css/auth-modal.css">
 </head>
@@ -106,7 +107,7 @@
             <div class="row mb-5">
                 <div class="col-md-6 ftco-animate">
                     <div class="img"
-                        style="background-image: url(images/services-1.jpg); height: 400px; background-size: cover; background-position: center; border-radius: 10px;">
+                        style="background-image: url(images/dest-sigiriya.jpg); height: 400px; background-size: cover; background-position: center; border-radius: 10px;">
                     </div>
                 </div>
                 <div class="col-md-6 ftco-animate">
@@ -135,7 +136,7 @@
             <div class="row mb-5">
                 <div class="col-md-6 ftco-animate order-md-last">
                     <div class="img"
-                        style="background-image: url(images/services-2.jpg); height: 400px; background-size: cover; background-position: center; border-radius: 10px;">
+                        style="background-image: url(images/dest-yala.jpg); height: 400px; background-size: cover; background-position: center; border-radius: 10px;">
                     </div>
                 </div>
                 <div class="col-md-6 ftco-animate">
@@ -164,7 +165,7 @@
             <div class="row mb-5">
                 <div class="col-md-6 ftco-animate">
                     <div class="img"
-                        style="background-image: url(images/services-3.jpg); height: 400px; background-size: cover; background-position: center; border-radius: 10px;">
+                        style="background-image: url(images/beach.png); height: 400px; background-size: cover; background-position: center; border-radius: 10px;">
                     </div>
                 </div>
                 <div class="col-md-6 ftco-animate">
@@ -191,7 +192,7 @@
             <div class="row mb-5">
                 <div class="col-md-6 ftco-animate order-md-last">
                     <div class="img"
-                        style="background-image: url(images/services-4.jpg); height: 400px; background-size: cover; background-position: center; border-radius: 10px;">
+                        style="background-image: url(images/dest-adams-peak.jpg); height: 400px; background-size: cover; background-position: center; border-radius: 10px;">
                     </div>
                 </div>
                 <div class="col-md-6 ftco-animate">
@@ -219,12 +220,12 @@
             <div class="row mb-5">
                 <div class="col-md-6 ftco-animate">
                     <div class="img"
-                        style="background-image: url(images/destination-1.jpg); height: 400px; background-size: cover; background-position: center; border-radius: 10px;">
+                        style="background-image: url(images/teaplantation.png); height: 400px; background-size: cover; background-position: center; border-radius: 10px;">
                     </div>
                 </div>
                 <div class="col-md-6 ftco-animate">
                     <div class="pl-md-5">
-                        <span class="subheading">Service 05</span>
+                        <!-- <span class="subheading">Service 05</span> -->
                         <h2 class="mb-4">Tea Plantation Tours</h2>
                         <p>Discover the world-famous Ceylon tea in the misty hill country. Visit working tea estates,
                             learn about tea production, and enjoy scenic train rides through tea plantations.</p>
@@ -247,7 +248,7 @@
             <div class="row mb-5">
                 <div class="col-md-6 ftco-animate order-md-last">
                     <div class="img"
-                        style="background-image: url(images/destination-2.jpg); height: 400px; background-size: cover; background-position: center; border-radius: 10px;">
+                        style="background-image: url(images/dest-ella.jpg); height: 400px; background-size: cover; background-position: center; border-radius: 10px;">
                     </div>
                 </div>
                 <div class="col-md-6 ftco-animate">
@@ -270,6 +271,68 @@
                             </li>
                             <li><i class="fa fa-check" style="color: var(--sunset-orange);"></i> 24/7 support during
                                 tour</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Service 7 - Airport Transfer -->
+            <div class="row mb-5">
+                <div class="col-md-6 ftco-animate">
+                    <div class="img"
+                        style="background-image: url(images/airport.png); height: 400px; background-size: cover; background-position: center; border-radius: 10px;">
+                    </div>
+                </div>
+                <div class="col-md-6 ftco-animate">
+                    <div class="pl-md-5">
+                        <h2 class="mb-4">Airport Transfer Services</h2>
+                        <p>Start your Sri Lankan adventure stress-free with our reliable airport transfer services. We
+                            provide comfortable, safe, and punctual transportation from Bandaranaike International
+                            Airport to any destination across Sri Lanka.</p>
+                        <ul class="list-unstyled">
+                            <li><i class="fa fa-check" style="color: var(--sunset-orange);"></i> 24/7 airport pickup &
+                                drop-off</li>
+                            <li><i class="fa fa-check" style="color: var(--sunset-orange);"></i> Flight tracking for
+                                delays</li>
+                            <li><i class="fa fa-check" style="color: var(--sunset-orange);"></i> Meet & greet service
+                            </li>
+                            <li><i class="fa fa-check" style="color: var(--sunset-orange);"></i> Air-conditioned
+                                vehicles</li>
+                            <li><i class="fa fa-check" style="color: var(--sunset-orange);"></i> <strong>Professional
+                                    male or female drivers</strong></li>
+                            <li><i class="fa fa-check" style="color: var(--sunset-orange);"></i> Luggage assistance</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Service 8 - Taxi Services -->
+            <div class="row mb-5">
+                <div class="col-md-6 ftco-animate order-md-last">
+                    <div class="img"
+                        style="background-image: url(images/taxi.png); height: 400px; background-size: cover; background-position: center; border-radius: 10px;">
+                    </div>
+                </div>
+                <div class="col-md-6 ftco-animate">
+                    <div class="pr-md-5">
+                        <h2 class="mb-4">Taxi Services</h2>
+                        <p>Explore Sri Lanka at your own pace with our flexible taxi services. Whether you need
+                            transportation for a day, a week, or longer, we provide comfortable vehicles with
+                            experienced drivers who know the island inside out.</p>
+                        <ul class="list-unstyled">
+                            <li><i class="fa fa-check" style="color: var(--sunset-orange);"></i> Daily, weekly & monthly
+                                rentals</li>
+                            <li><i class="fa fa-check" style="color: var(--sunset-orange);"></i> Point-to-point
+                                transfers</li>
+                            <li><i class="fa fa-check" style="color: var(--sunset-orange);"></i> City tours &
+                                sightseeing</li>
+                            <li><i class="fa fa-check" style="color: var(--sunset-orange);"></i> English-speaking
+                                drivers</li>
+                            <li><i class="fa fa-check" style="color: var(--sunset-orange);"></i> <strong>Choice of male
+                                    or female drivers</strong></li>
+                            <li><i class="fa fa-check" style="color: var(--sunset-orange);"></i> Competitive rates</li>
+                            <li><i class="fa fa-check" style="color: var(--sunset-orange);"></i> Clean & well-maintained
+                                vehicles</li>
                         </ul>
                     </div>
                 </div>
@@ -389,8 +452,8 @@
                 <div class="col-lg-3 col-md-12">
                     <h3 class="footer-heading">Contact Us</h3>
                     <ul class="footer-contact-info list-unstyled">
-                        <li><i class="fa fa-map-marker"></i> Colombo, Sri Lanka</li>
-                        <li><a href="tel:+94762686428" style="color: inherit;"><i class="fa fa-phone"></i> +94 76 268
+                        <li><i class="fa fa-map-marker"></i> 23/1 Colombo Road, Negombo, Sri Lanka</li>
+                        <li><a href="tel:+94711818549" style="color: inherit;"><i class="fa fa-phone"></i> +94 71 181
                                 6428</a></li>
                         <li><a href="tel:+94711818549" style="color: inherit;"><i class="fa fa-phone"></i> +94 71 181
                                 8549</a></li>
@@ -558,7 +621,7 @@
     <script src="js/auth.js" defer></script>
     <script src="js/video-autoplay.js" defer></script>
     <!-- Floating WhatsApp Button -->
-    <a href="https://wa.me/94762686428?text=Hello%20Wander%20Lanka%20Tours,%20I%20would%20like%20to%20inquire%20about%20a%20tour."
+    <a href="https://wa.me/94711818549?text=Hello%20Wander%20Lanka%20Tours,%20I%20would%20like%20to%20inquire%20about%20a%20tour."
         class="whatsapp-float" target="_blank" aria-label="Chat on WhatsApp">
         <i class="fa fa-whatsapp whatsapp-icon"></i>
     </a>
