--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/typography.css">
     <link rel="stylesheet" href="css/ceylon-sang.css?v=7">
+    <link rel="stylesheet" href="css/hero-fixes.css?v=2">
     <link rel="stylesheet" href="css/mobile-enhancements.css">
     <link rel="stylesheet" href="css/auth-modal.css">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
@@ -112,7 +113,7 @@
                     <div class="contact-info-item text-center">
                         <div class="icon"><span class="fa fa-phone"></span></div>
                         <h3>Phone</h3>
-                        <p><a href="tel:+94762686428">+94 76 268 6428</a><br>
+                        <p><a href="tel:+94711818549">+94 71 181 8549</a><br>
                             <a href="tel:+94711818549">+94 71 181 8549</a>
                         </p>
                     </div>
@@ -176,7 +177,7 @@
                                 <span class="divider-line"></span>
                             </div>
 
-                            <a href="https://wa.me/94762686428?text=Hi,%20I'm%20interested%20in%20Wander%20Lanka%20Tours"
+                            <a href="https://wa.me/94711818549?text=Hi,%20I'm%20interested%20in%20Wander%20Lanka%20Tours"
                                 class="btn-premium-secondary" target="_blank">
                                 <div class="btn-label">
                                     <i class="fa fa-whatsapp"></i> Chat on WhatsApp
@@ -396,8 +397,8 @@
                 <div class="col-lg-3 col-md-12">
                     <h3 class="footer-heading">Contact Us</h3>
                     <ul class="footer-contact-info list-unstyled">
-                        <li><i class="fa fa-map-marker"></i> Colombo, Sri Lanka</li>
-                        <li><a href="tel:+94762686428" style="color: inherit;"><i class="fa fa-phone"></i> +94 76 268
+                        <li><i class="fa fa-map-marker"></i> 23/1 Colombo Road, Negombo, Sri Lanka</li>
+                        <li><a href="tel:+94711818549" style="color: inherit;"><i class="fa fa-phone"></i> +94 71 181
                                 6428</a></li>
                         <li><a href="tel:+94711818549" style="color: inherit;"><i class="fa fa-phone"></i> +94 71 181
                                 8549</a></li>
@@ -570,7 +571,7 @@
     <script src="js/reviews.js" defer></script>
 
     <!-- Floating WhatsApp Button -->
-    <a href="https://wa.me/94762686428?text=Hello%20Wander%20Lanka%20Tours,%20I%20would%20like%20to%20inquire%20about%20a%20tour."
+    <a href="https://wa.me/94711818549?text=Hello%20Wander%20Lanka%20Tours,%20I%20would%20like%20to%20inquire%20about%20a%20tour."
         class="whatsapp-float" target="_blank" aria-label="Chat on WhatsApp">
         <i class="fa fa-whatsapp whatsapp-icon"></i>
     </a>
