--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/typography.css">
     <link rel="stylesheet" href="css/ceylon-sang.css?v=7">
+    <link rel="stylesheet" href="css/hero-fixes.css?v=2">
     <link rel="stylesheet" href="css/ceylon-sang-grid.css">
     <link rel="stylesheet" href="css/mobile-enhancements.css">
     <link rel="stylesheet" href="css/auth-modal.css">
@@ -101,7 +102,7 @@
 
     <!-- Hero Section with Video Background -->
     <section class="hero-wrap js-fullheight">
-        <!-- Video Background -->
+        <!-- Video Background with reduced opacity and slower playback -->
         <video autoplay muted loop playsinline webkit-playsinline preload="auto" id="hero-video" class="hero-video">
             <source src="https://cdn.pixabay.com/video/2022/09/21/132140-752588954_large.mp4" type="video/mp4">
             <!-- Fallback for browsers that don't support video -->
@@ -110,59 +111,38 @@
         <!-- Fallback Background Image -->
         <div class="hero-video-fallback" style="background-image: url('images/bg_1.jpg');"></div>
 
-        <div class="overlay"></div>
+        <!-- Dark Gradient Overlay for cinematic feel -->
+        <div class="hero-overlay-gradient"></div>
+
         <div class="container">
             <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center"
                 data-scrollax-parent="true">
-                <div class="col-md-10 text-center ftco-animate">
-                    <span class="subheading"><br /> to Wander Lanka Tours</span>
-                    <h1 class="mb-4">Discover the Pearl of the Indian Ocean</h1>
-                    <p class="caps mb-4">Experience the magic of Sri Lanka with expert local guidance</p>
+                <div class="col-md-10 col-lg-9 text-center ftco-animate">
+                    <!-- Glassmorphism Content Container -->
+                    <div class="hero-glass-container">
+                        <!-- Brand Name with Premium Styling -->
+                        <div class="hero-brand-name">
+                            <img src="images/logo/brandname.png" alt="Wander Lanka Tours" class="hero-brand-logo">
+                        </div>
 
-                    <!-- Key Highlights -->
-                    <!-- <div class="row mt-5 mb-4">
-                        <div class="col-md-3 col-6 mb-3">
-                            <div class="hero-stat">
-                                <div class="icon-circle">
-                                    <span class="fa fa-map-marker"></span>
-                                </div>
-                                <h3>50+</h3>
-                                <p>Destinations</p>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-6 mb-3">
-                            <div class="hero-stat">
-                                <div class="icon-circle">
-                                    <span class="fa fa-users"></span>
-                                </div>
-                                <h3>5000+</h3>
-                                <p>Happy Travelers</p>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-6 mb-3">
-                            <div class="hero-stat">
-                                <div class="icon-circle">
-                                    <span class="fa fa-star"></span>
-                                </div>
-                                <h3>4.9/5</h3>
-                                <p>Rating</p>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-6 mb-3">
-                            <div class="hero-stat">
-                                <div class="icon-circle">
-                                    <span class="fa fa-calendar"></span>
-                                </div>
-                                <h3>10+</h3>
-                                <p>Years Experience</p>
-                            </div>
-                        </div>
-                    </div> -->
+                        <!-- Main Headline -->
+                        <h1 class="hero-headline">Discover the Pearl of the Indian Ocean</h1>
 
-                    <a href="packages.html" class="btn btn-primary px-4 py-3 mr-2">Explore Our Tours</a>
-                    <a href="https://wa.me/94771234567" target="_blank" class="btn btn-white px-4 py-3"><span
-                            class="fa fa-whatsapp mr-2"></span>WhatsApp Us</a>
-                    </p>
+                        <!-- Subheadline -->
+                        <p class="hero-subheadline">Experience the magic of Sri Lanka with expert local guidance</p>
+
+                        <!-- CTA Buttons with Enhanced Visibility -->
+                        <div class="hero-cta-group">
+                            <a href="packages.html" class="btn-hero-primary">
+                                <span class="btn-text">Explore Our Tours</span>
+                                <span class="btn-icon">→</span>
+                            </a>
+                            <a href="https://wa.me/94711818549" target="_blank" class="btn-hero-secondary">
+                                <span class="fa fa-whatsapp btn-icon-left"></span>
+                                <span class="btn-text">WhatsApp Us</span>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -475,8 +455,8 @@
                 <div class="col-lg-3 col-md-12">
                     <h3 class="footer-heading">Contact Us</h3>
                     <ul class="footer-contact-info list-unstyled">
-                        <li><i class="fa fa-map-marker"></i> Colombo, Sri Lanka</li>
-                        <li><a href="tel:+94762686428" style="color: inherit;"><i class="fa fa-phone"></i> +94 76 268
+                        <li><i class="fa fa-map-marker"></i> 23/1 Colombo Road, Negombo, Sri Lanka</li>
+                        <li><a href="tel:+94711818549" style="color: inherit;"><i class="fa fa-phone"></i> +94 71 181
                                 6428</a></li>
                         <li><a href="tel:+94711818549" style="color: inherit;"><i class="fa fa-phone"></i> +94 71 181
                                 8549</a></li>
@@ -675,9 +655,17 @@
                 });
             });
         });
+
+        // Slow down hero video for cinematic effect
+        document.addEventListener('DOMContentLoaded', function () {
+            const heroVideo = document.getElementById('hero-video');
+            if (heroVideo) {
+                heroVideo.playbackRate = 0.75; // Slow motion for cinematic feel
+            }
+        });
     </script>
     <!-- Floating WhatsApp Button -->
-    <a href="https://wa.me/94762686428?text=Hello%20Wander%20Lanka%20Tours,%20I%20would%20like%20to%20inquire%20about%20a%20tour."
+    <a href="https://wa.me/94711818549?text=Hello%20Wander%20Lanka%20Tours,%20I%20would%20like%20to%20inquire%20about%20a%20tour."
         class="whatsapp-float" target="_blank" aria-label="Chat on WhatsApp">
         <i class="fa fa-whatsapp whatsapp-icon"></i>
     </a>
