--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         <h1 class="hero-headline">Discover the Pearl of the Indian Ocean</h1>
 
                         <!-- Subheadline -->
-                        <p class="hero-subheadline">Experience the magic of Sri Lanka with expert local guidance</p>
+                        <!-- <p class="hero-subheadline">Experience the magic of Sri Lanka with expert local guidance</p> -->
 
                         <!-- CTA Buttons with Enhanced Visibility -->
                         <div class="hero-cta-group">
