--- a/profile.html
+++ b/profile.html
@@ -96,8 +96,8 @@
                         </div>
                         <div class="profile-menu">
                             <a href="#profile" class="active"><i class="fa fa-user-o"></i> Personal Info</a>
-                            <a href="#bookings"><i class="fa fa-calendar-check-o"></i> My Bookings</a>
-                            <a href="#settings"><i class="fa fa-cog"></i> Settings</a>
+                            <!-- <a href="#bookings"><i class="fa fa-calendar-check-o"></i> My Bookings</a> -->
+                            <!-- <a href="#settings"><i class="fa fa-cog"></i> Settings</a> -->
                             <a onclick="handleLogout()" class="text-danger"><i class="fa fa-sign-out"></i> Logout</a>
                         </div>
                     </div>
@@ -149,7 +149,8 @@
                             </form>
                         </div>
 
-                        <!-- Recent Bookings Placeholder -->
+
+                        <!-- Recent Bookings Section - Commented Out (Not Implemented)
                         <div class="content-card mt-4">
                             <div class="card-header">
                                 <h2>Recent Bookings</h2>
@@ -163,6 +164,7 @@
                                 <a href="packages.html" class="btn btn-primary mt-2">Explore Tours</a>
                             </div>
                         </div>
+                        -->
                     </div>
                 </div>
             </div>
