--- a/contact.html
+++ b/contact.html
@@ -110,13 +110,14 @@
                     </div>
                 </div>
                 <div class="col-md-4 ftco-animate">
-                    <div class="contact-info-item text-center">
-                        <div class="icon"><span class="fa fa-phone"></span></div>
-                        <h3>Phone</h3>
-                        <p><a href="tel:+94711818549">+94 71 181 8549</a><br>
-                            <a href="tel:+94711818549">+94 71 181 8549</a>
-                        </p>
-                    </div>
+                    <a href="tel:+94711816428" style="text-decoration: none; color: inherit; display: block;">
+                        <div class="contact-info-item text-center"
+                            style="cursor: pointer; transition: transform 0.3s ease;">
+                            <div class="icon"><span class="fa fa-phone"></span></div>
+                            <h3>Phone</h3>
+                            <p>+94 71 181 6428</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="col-md-4 ftco-animate">
                     <div class="contact-info-item text-center">
@@ -310,12 +311,14 @@
             </div>
             <div class="row">
                 <div class="col-md-3 ftco-animate text-center">
-                    <div class="contact-info-item">
-                        <div class="icon"><span class="fa fa-facebook"></span></div>
-                        <h3>Facebook</h3>
-                        <p><a href="https://www.facebook.com/share/1C66ZvspiU/" target="_blank">@WanderLankaTours</a>
-                        </p>
-                    </div>
+                    <a href="https://www.facebook.com/share/1C66ZvspiU/" target="_blank"
+                        style="text-decoration: none; color: inherit; display: block;">
+                        <div class="contact-info-item" style="cursor: pointer; transition: transform 0.3s ease;">
+                            <div class="icon"><span class="fa fa-facebook"></span></div>
+                            <h3>Facebook</h3>
+                            <p>@WanderLankaTours</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="col-md-3 ftco-animate text-center">
                     <div class="contact-info-item">
@@ -332,11 +335,14 @@
                     </div>
                 </div>
                 <div class="col-md-3 ftco-animate text-center">
-                    <div class="contact-info-item">
-                        <div class="icon"><span class="fa fa-whatsapp"></span></div>
-                        <h3>WhatsApp</h3>
-                        <p><a href="#">+94 77 123 4567</a></p>
-                    </div>
+                    <a href="https://wa.me/94711818549" target="_blank"
+                        style="text-decoration: none; color: inherit; display: block;">
+                        <div class="contact-info-item" style="cursor: pointer; transition: transform 0.3s ease;">
+                            <div class="icon"><span class="fa fa-whatsapp"></span></div>
+                            <h3>WhatsApp</h3>
+                            <p>+94 71 181 8549</p>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
