feat: Introduce `ceylon-sang.css` to implement a modern UI redesign featuring a flat luxury navigation, sticky filter bar, and updated footer logo across all pages.

--- a/about.html
+++ b/about.html
@@ -246,8 +246,7 @@
                 <div class="col-lg-4 col-md-6 mb-5 mb-md-0">
                     <div class="footer-brand">
                         <a href="index.html" class="logo">
-                            <img src="images/logo/logo1.png" alt="Wander Lanka Tours"
-                                style="height: 70px; margin-bottom: 20px;">
+                            <img src="images/logo/footer.png" alt="Wander Lanka Tours" class="footer-logo-img">
                         </a>
                         <p>Your trusted Sri Lankan tour guide, bringing you authentic experiences and unforgettable
                             memories across the Pearl of the Indian Ocean.</p>
